fixing scrolling issue on mobile version

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,7 @@
 
 .game {
     width: 100vw;
+    height: 100dvh;
     height: 100vh;
     display: flex;
     justify-content: center;
